# clipboard-sync

./: .gitignore  Cargo.nix  Cargo.toml  flake.nix
.github/workflows/: relay-build-docker.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/clipboardsync/: MainActivity.kt  MainDatabase.kt  SyncWorker.kt
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
clipboard-sync-client/: Cargo.toml
clipboard-sync-client/src/: config.rs  handler.rs  main.rs
clipboard-sync-relay/: Cargo.toml  Dockerfile
clipboard-sync-relay/src/: main.rs
nix/: hm-module.nix
