[package]
name = "clipboard-sync-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
config = "0.15.4"
futures-util = "0.3.31"
once_cell = "1.20.2"
rand = "0.8.5"
rsa = "0.9.7"
serde = { version = "1.0.217", features = ["derive"] }
sha256 = "1.5.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.1"
